Machu picchu con cambio de idioma

--- a/en/machupicchu.html
+++ b/en/machupicchu.html
@@ -63,8 +63,8 @@
               <div style="padding: 26px 16px;">   
                 <!-- <div>Idioma:</div> -->
                 <select id="cbIdioma" name="cbIdioma" onchange="onChangeIdioma(this)" >
-                  <option value="es" selected>Español</option>
-                  <option value="us">English</option>               
+                  <option value="es">Español</option>
+                  <option value="us" selected>English</option>               
                 </select> 
               </div> 
             </li>
@@ -120,10 +120,10 @@
             </div>
 
             <div class="mt-7">
-              <h2 class="text-uppercase mb-5">Descripción</h2>
-              <p class="mb-3">Sitio arqueológico inca más sobresaliente debido a su creativo diseño urbano, la belleza de su arquitectura y el fino trabajo en piedra de sus construcciones.</p>
-              <p class="mb-6">Se cree que la ciudadela de Machu Picchu fue construida alrededor de 1450 por órdenes de Pachacútec, el primer gran soberano del Imperio incaico. El lujoso complejo urbano se mandó a edificar entre las montañas de Machu Picchu y Huayna Picchu, que se alzan sobre el Valle Sagrado de los Incas.</p>
-              <h2 class="text-uppercase mb-5">Datos relevantes</h2>
+              <h2 class="text-uppercase mb-5">Description</h2>
+              <p class="mb-3">The most outstanding Inca archaeological site due to its creative urban design, the beauty of its architecture and the fine stonework of its constructions.</p>
+              <p class="mb-6">It is believed that the citadel of Machu Picchu was built around 1450 by orders of Pachacutec, the first great ruler of the Inca Empire. The luxurious urban complex was built between the mountains of Machu Picchu and Huayna Picchu, which rise above the Sacred Valley of the Incas.</p>
+              <h2 class="text-uppercase mb-5">Relevant data</h2>
 
               <div class="mb-5">
                 <div class="row">
@@ -134,7 +134,7 @@
                           <i class="fa fa-dot-circle-o" aria-hidden="true"></i>
                         </div>
                         <div class="media-body">
-                          <p>Considerada la tercera de las sietes maravillas del mundo moderno.</p>
+                          <p>Considered the third of the seven wonders of the modern world.</p>
                         </div>
                       </li>
 
@@ -143,7 +143,7 @@
                           <i class="fa fa-dot-circle-o" aria-hidden="true"></i>
                         </div>
                         <div class="media-body">
-                          <p>Construida en el siglo XV, posee una temperatura que puede ir desde los -2°C hasta los 21°C.</p>
+                          <p>Built in the 15th century, it has a temperature that can range from -2°C to 21°C.</p>
                         </div>
                       </li>
 
@@ -152,7 +152,7 @@
                           <i class="fa fa-dot-circle-o" aria-hidden="true"></i>
                         </div>
                         <div class="media-body">
-                          <p>Machu Picchu, es un término quechua cuyo significado es Montaña vieja.</p>
+                          <p>Machu Picchu is a Quechua term whose meaning is Old Mountain.</p>
                         </div>
                       </li>
 
