--- a/en/ollantaytambo.html
+++ b/en/ollantaytambo.html
@@ -40,7 +40,13 @@
     <![endif]-->
 
   </head>     
-
+  <style>
+    @media (max-width: 767px) {
+     .page-title-content {
+         margin-top: 31px;
+       }
+   }
+ </style>
 <body id="body" class="up-scroll" data-spy="scroll" data-target=".element-right-sidebar">
 
   <!-- ====================================
@@ -84,7 +90,7 @@
       <div class="page-title-img bg-img bg-overlay-darken" style="background-image: url(../assets/img/imgsmargus/oll1.jpg);">
         <div class="container">
           <div class="row align-items-center justify-content-center" style="height: 150px;">
-            <div class="col-lg-6" style="margin-top:30px">
+            <div class="col-lg-6" style="margin-top:20px">
               <div class="page-title-content">
                 <div class="">
                   <h2 class="text-uppercase text-white font-weight-bold">Ollantaytambo</h2>
