--- a/es/catedralcusco.html
+++ b/es/catedralcusco.html
@@ -39,7 +39,14 @@
     <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
     <![endif]-->
 
-  </head>     
+  </head>   
+  <style>
+    @media (max-width: 767px) {
+     .page-title-content {
+         margin-top: 31px;
+       }
+   }
+ </style>  
 
 <body id="body" class="up-scroll" data-spy="scroll" data-target=".element-right-sidebar">
 
@@ -84,7 +91,7 @@
       <div class="page-title-img bg-img bg-overlay-darken" style="background-image: url(../assets/img/imgsmargus/cc1.jpg);">
         <div class="container">
           <div class="row align-items-center justify-content-center" style="height: 150px;">
-            <div class="col-lg-6" style="margin-top:30px">
+            <div class="col-lg-6" style="margin-top:20px">
               <div class="page-title-content">
                 <div class="">
                   <h2 class="text-uppercase text-white font-weight-bold">Catedral de Cusco</h2>
