correcciones florista, catedral

--- a/es/catedrallima.html
+++ b/es/catedrallima.html
@@ -95,7 +95,7 @@
             <div class="col-lg-6" style="margin-top:20px">
               <div class="page-title-content">
                 <div class="">
-                  <h2 class="text-uppercase text-white font-weight-bold">Lima Cathedral</h2>
+                  <h2 class="text-uppercase text-white font-weight-bold">Catedral de Lima</h2>
                 </div>
                 <!-- <p class="text-white mb-0">Lorem ipsum dolor sit amet, consectetur adipisicing elit</p> -->
               </div>
@@ -115,7 +115,7 @@
           <div class="col-md-12">
             <div id="package-slider" class="owl-carousel owl-theme package-slider">
               <div class="item">
-                <img class="lazyestload" data-src="../assets/img/imgsmargus/cl1.png" src="../assets/img/imgsmargus/cl1.jpg" alt="image">
+                <img class="lazyestload" data-src="../assets/img/imgsmargus/cl1.jpg" src="../assets/img/imgsmargus/cl1.jpg" alt="image">
               </div>
 
               <div class="item">
