--- a/es/florista.html
+++ b/es/florista.html
@@ -123,7 +123,7 @@
               </div>
 
               <div class="item">
-                <img class="lazyestload" data-src="../assets/img/imgsmargus/flor3.jpg" src="../assets/img/imgsmargus/flor3.jpg" alt="image">
+                <img class="lazyestload" data-src="../assets/img/imgsmargus/flor3.JPG" src="../assets/img/imgsmargus/flor3.JPG" alt="image">
               </div>
             </div>
 
