--- a/es/nasca.html
+++ b/es/nasca.html
@@ -123,7 +123,7 @@
               </div>
 
               <div class="item">
-                <img class="lazyestload" data-src="../assets/img/imgsmargus/nas3.webp" src="../assets/img/imgsmargus/nas3.webp" alt="image">
+                <img class="lazyestload" data-src="../assets/img/imgsmargus/nas3.jpg" src="../assets/img/imgsmargus/nas3.jpg" alt="image">
               </div>
             </div>
 
