--- a/es/vino.html
+++ b/es/vino.html
@@ -89,7 +89,7 @@
     ———	PAGE TITLE
     ===================================== -->
     <section class="page-title">
-      <div class="page-title-img bg-img bg-overlay-darken" style="background-image: url(../assets/img/imgsmargus/vin1.jpg);">
+      <div class="page-title-img bg-img bg-overlay-darken" style="background-image: url(../assets/img/imgsmargus/vin1.avif);">
         <div class="container">
           <div class="row align-items-center justify-content-center" style="height: 150px;">
             <div class="col-lg-6" style="margin-top:20px">
@@ -115,7 +115,7 @@
           <div class="col-md-12">
             <div id="package-slider" class="owl-carousel owl-theme package-slider">
               <div class="item">
-                <img class="lazyestload" data-src="../assets/img/imgsmargus/vin1.jpg" src="../assets/img/imgsmargus/vin1.jpg" alt="image">
+                <img class="lazyestload" data-src="../assets/img/imgsmargus/vin1.avif" src="../assets/img/imgsmargus/vin1.avif" alt="image">
               </div>
 
               <div class="item">
