--- a/es/cuchimilco.html
+++ b/es/cuchimilco.html
@@ -119,7 +119,7 @@
               </div>
 
               <div class="item">
-                <img class="lazyestload" data-src="../assets/img/imgsmargus/cuch2.jpg" src="../assets/img/imgsmargus/cuch2.jpg" alt="image">
+                <img class="lazyestload" data-src="../assets/img/imgsmargus/cuch2.JPG" src="../assets/img/imgsmargus/cuch2.JPG" alt="image">
               </div>
 
               <div class="item">
